# tiler_core

./: Cargo.toml  LICENSE  README.md
src/: game.rs  lib.rs  locale.rs  player.rs
src/bot/: easy.rs  medium.rs  mod.rs
src/errors/: mod.rs
src/field/: box_field.rs  bricks.rs  brilliant.rs  four_rooms.rs  mod.rs
src/field/mosaics/: mod.rs  parquet_1.rs
