[package]
name = "tiler_core"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/tehnarenok/tiler_core"
description = "Core library for tiler game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
best_macros = "0.1.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }

[features]
wasm = []