[package]
name = "tiler_core"
version = "0.1.13"
edition = "2018"
repository = "https://github.com/tehnarenok/tiler_core"
description = "Core library for tiler game"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
best_macros = "0.1.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
sha2 = { version = "0.10", default-features = false }
base64ct = { version = "1.5.0", features = ["alloc"] }

[features]
serde = []
hash = ["serde"]
default = ["hash"]
